--- a/css/screen.css
+++ b/css/screen.css
@@ -79,6 +79,7 @@ li {
 
 .navbar .brand {
   max-width: 60px;
+  margin-left: 100px;
 }
 
 .navbar a:hover{
@@ -103,7 +104,7 @@ li {
   left:0px;
   right:0px;
   bottom:0px;
-  z-index:10000;
+  z-index:10001;
 }
 
 #loading img{
@@ -122,6 +123,15 @@ li {
   font-size: 220px;
   margin: 90px auto 117px;
   font-weight: 600;
+}
+
+#dhflogo {
+  top: 0;
+  right: 0;
+  position:fixed;
+  padding-right: 10em;
+  text-align: right;
+  z-index:10000;
 }
 
 #footer{
@@ -171,6 +181,29 @@ h3 {
 h3 span {
   font-size: 24px;
 }
+
+.press h3 {
+  font-size: 18px;
+  text-align: left;
+  text-transform: uppercase;
+  margin-top: 5px;
+}
+
+.press h3 span {
+  margin-left: 15px;
+  font-size: 12px;
+  text-transform: none;
+  font-style:italic;
+}
+
+.press a:hover {
+  text-decoration: underline;
+}
+
+.press ul li {
+  margin-left: -15px;
+}
+
 
 h4 {
   text-transform: uppercase;
@@ -337,8 +370,26 @@ input[type="text"] {
 
 }
 
-.pagebg.imageabout{ 
-  background: url("/img/8664271822_0b360afacf_n.jpg") no-repeat;
+.pagebg.imagemission{ 
+  background: url("/img/dhf-1.jpg") no-repeat;
+  background-size:cover;
+  background-color:#0091c9;
+  background-position:center;
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/8664271822_0b360afacf_n.jpg', sizingMethod='scale')";
+  opacity:0.9;
+  filter:alpha(opacity=90); /* For IE8 and earlier */
+}
+.pagebg.imageblog{ 
+  background: url("/img/dhf-2.jpg") no-repeat;
+  background-size:cover;
+  background-color:#0091c9;
+  background-position:center;
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/8664271822_0b360afacf_n.jpg', sizingMethod='scale')";
+  opacity:0.9;
+  filter:alpha(opacity=90); /* For IE8 and earlier */
+}
+.pagebg.imagetechcenter{ 
+  background: url("/img/dhf-3.jpg") no-repeat;
   background-size:cover;
   background-color:#0091c9;
   background-position:center;
@@ -346,8 +397,8 @@ input[type="text"] {
   opacity:0.6;
   filter:alpha(opacity=60); /* For IE8 and earlier */
 }
-.pagebg.imagemobile{ 
-  background: url("/img/mobileapp.jpg") no-repeat;
+.pagebg.imageteam{ 
+  background: url("/img/dhf-4.jpg") no-repeat;
   background-size:cover;
   background-color:#0091c9;
   background-position:center;
@@ -355,8 +406,17 @@ input[type="text"] {
   opacity:0.6;
   filter:alpha(opacity=60); /* For IE8 and earlier */
 }
-.pagebg.imagefab{ 
-  background: url("/img/fab.jpg") no-repeat;
+.pagebg.imagepress{ 
+  background: url("/img/dhf-5.jpg") no-repeat;
+  background-size:cover;
+  background-color:#0091c9;
+  background-position:center;
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/img/8664271822_0b360afacf_n.jpg', sizingMethod='scale')";
+  opacity:0.6;
+  filter:alpha(opacity=60); /* For IE8 and earlier */
+}
+.pagebg.imagecontact{ 
+  background: url("/img/dhf-6.jpg") no-repeat;
   background-size:cover;
   background-color:#0091c9;
   background-position:center;
@@ -565,7 +625,7 @@ padding-left: 20px;
   line-height: 30px;
 }
 
-.fellowship{ 
+.fellowship { 
   color:#333;
   position:relative; height:100%; width:100%; 
 }
@@ -651,7 +711,7 @@ padding-left: 20px;
 .zoomout{ 
   top:239px;
 }
-.fellowshipyearfixed{ 
+.fellowshipyearfixed { 
   position:fixed;
   top:0px;
   left:50px;
@@ -1070,184 +1130,161 @@ padding-left: 20px;
   margin: 5px 5px 0 0;
 }
 
-.aaron {
+
+.sean,
+.josh,
+.chris,
+.david,
+.guy,
+.olga,
+.rachel,
+.vincent {
+  background-image: url('../img/btrustee_headshot.jpg');
+  background-size: 50px;
+  float: left;
+  width: 50px;
+  height: 50px;
+  margin: 5px 5px 0 0;
+}
+
+
+.sean {
+  background-position: 0 -50px;
+}
+
+
+.aleccouros,
+.chrislehmann,
+.christinejohnson,
+.christophersessums,
+.deangroom,
+.donabrams,
+.kevintame,
+.marybethhertz,
+.mckeeverconwell,
+.mikebrenner,
+.rodneyfoxworth,
+.shellyblakeplock,
+.steveanderson,
+.tommurdock,
+.willrichardson {
+  background-image: url('../img/badvisors_headshot.jpg');
+  background-size: 100px;
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 20px 20px 0 0;
+}
+
+
+
+.aleccouros {
   background-position: 0 0;
 }
 
-.alan {
-  background-position: 0 -50px
+.chrislehmann {
+  background-position: 0 -100px
 }
 
-.anna {
-  background-position: 0 -100px;
-}
-
-.chacha {
-  background-position: 0 -150px;
-}
-
-.erik {
+.christinejohnson {
   background-position: 0 -200px;
 }
 
-.jeremy {
-  background-position: 0 -250px;
-}
-
-.joel {
+.christophersessums {
   background-position: 0 -300px;
 }
 
-.john {
-  background-position: 0 -350px;
-}
-
-.karla {
+.deangroom {
   background-position: 0 -400px;
 }
 
-.matt {
-  background-position: 0 -450px;
-}
-
-.max {
+.donabrams {
   background-position: 0 -500px;
 }
 
-.michael {
-  background-position: 0 -550px;
+.kevintame {
+  background-position: 0 -600px;
 }
 
-.michellek {
-  background-position: 0 -600px
-}
-
-.mjumbe {
-  background-position: 0 -650px;
-}
-
-.pete {
+.marybethhertz {
   background-position: 0 -700px;
 }
 
-.ryan {
-  background-position: 0 -750px;
-}
-
-.scotts {
+.mckeeverconwell {
   background-position: 0 -800px;
 }
 
-.talin {
-  background-position: 0 -850px;
-}
-
-.tyler {
+.mikebrenner {
   background-position: 0 -900px;
 }
 
-.alexp {
-  background-position: 0 -950px;
-}
-
-.alexy {
+.rodneyfoxworth {
   background-position: 0 -1000px;
 }
 
-.alicia {
-  background-position: 0 -1050px;
+.shellyblakeplock {
+  background-position: 0 -1100px;
 }
 
-.amir {
-  background-position: 0 -1100px
+.steveanderson {
+  background-position: 0 -1200px
 }
 
-.angel {
-  background-position: 0 -1150px;
-}
-
-.aurelio {
-  background-position: 0 -1200px;
-}
-
-.ben {
-  background-position: 0 -1250px;
-}
-
-.diana {
+.tommurdock {
   background-position: 0 -1300px;
 }
 
-.eddie {
-  background-position: 0 -1350px;
-}
-
-.emily {
+.willrichardson {
   background-position: 0 -1400px;
 }
 
-.jesse {
-  background-position: 0 -1450px;
+
+.morefellowspop.sean,
+.morefellowspop.josh,
+.morefellowspop.chris,
+.morefellowspop.david,
+.morefellowspop.guy,
+.morefellowspop.olga,
+.morefellowspop.rachel,
+.morefellowspop.vincent {
+  background-image: url('../img/btrustee_headshot.jpg');
+  background-size: 100px;
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 20px 20px 0 0;
 }
 
-.jessica {
-  background-position: 0 -1500px;
+.morefellowspop.sean {
+  background-position: 0 0px;
 }
 
-.jim {
-  background-position: 0 -1550px;
+.morefellowspop.josh {
+  background-position: 0 -100px;
 }
 
-.joe {
-  background-position: 0 -1600px
+.morefellowspop.chirs {
+  background-position: 0 -200px;
 }
 
-.liz {
-  background-position: 0 -1650px;
+.morefellowspop.david {
+  background-position: 0 -300px;
 }
 
-.matth {
-  background-position: 0 -1700px;
+.morefellowspop.guy {
+  background-position: 0 -400px;
 }
 
-.michellel {
-  background-position: 0 -1750px;
+.morefellowspop.olga {
+  background-position: 0 -500px;
 }
 
-.mick {
-  background-position: 0 -1800px;
+.morefellowspop.rachel {
+  background-position: 0 -600px;
 }
 
-.nick {
-  background-position: 0 -1850px;
-}
-
-.prashant {
-  background-position: 0 -1900px;
-}
-
-.rob {
-  background-position: 0 -1950px;
-}
-
-.ruthie {
-  background-position: 0 -2000px;
-}
-
-.serena {
-  background-position: 0 -2050px;
-}
-
-.sheba {
-  background-position: 0 -2100px;
-}
-
-.tamara {
-  background-position: 0 -2150px;
-}
-
-.zach {
-  background-position: 0 -2200px;
+.morefellowspop.vincent {
+  background-position: 0 -700px;
 }
 
 .morefellowspop.alexp,
@@ -1288,105 +1325,7 @@ padding-left: 20px;
   background-position: 0 -1900px;
 }
 
-.morefellowspop.alexy {
-  background-position: 0 -2000px;
-}
 
-.morefellowspop.alicia {
-  background-position: 0 -2100px;
-}
-
-.morefellowspop.amir {
-  background-position: 0 -2200px
-}
-
-.morefellowspop.angel {
-  background-position: 0 -2300px;
-}
-
-.morefellowspop.aurelio {
-  background-position: 0 -2400px;
-}
-
-.morefellowspop.ben {
-  background-position: 0 -2500px;
-}
-
-.morefellowspop.diana {
-  background-position: 0 -2600px;
-}
-
-.morefellowspop.eddie {
-  background-position: 0 -2700px;
-}
-
-.morefellowspop.emily {
-  background-position: 0 -2800px;
-}
-
-.morefellowspop.jesse {
-  background-position: 0 -2900px;
-}
-
-.morefellowspop.jessica {
-  background-position: 0 -3000px;
-}
-
-.morefellowspop.jim {
-  background-position: 0 -3100px;
-}
-
-.morefellowspop.joe {
-  background-position: 0 -3200px;
-}
-
-.morefellowspop.liz {
-  background-position: 0 -3300px;
-}
-
-.morefellowspop.matth {
-  background-position: 0 -3400px;
-}
-
-.morefellowspop.michellel {
-  background-position: 0 -3500px;
-}
-
-.morefellowspop.mick {
-  background-position: 0 -3600px;
-}
-
-.morefellowspop.nick {
-  background-position: 0 -3700px;
-}
-
-.morefellowspop.prashant {
-  background-position: 0 -3800px;
-}
-
-.morefellowspop.rob {
-  background-position: 0 -3900px;
-}
-
-.morefellowspop.ruthie {
-  background-position: 0 -4000px;
-}
-
-.morefellowspop.serena {
-  background-position: 0 -4100px;
-}
-
-.morefellowspop.sheba {
-  background-position: 0 -4200px;
-}
-
-.morefellowspop.tamara {
-  background-position: 0 -4300px;
-}
-
-.morefellowspop.zach {
-  background-position: 0 -4400px;
-}
 
 .ecosystem h1 {
   margin-top: 70px;
@@ -1462,7 +1401,7 @@ padding-left: 20px;
 }
 
 .companies .contact {
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .carousel {
@@ -1593,7 +1532,9 @@ img.progicons {
 .captains a:hover,
 .fellowcard a:hover,
 .moreapps a:hover,
-.morefellows a:hover {
+.morefellows a:hover,
+.btrustee a:hover,
+.badvisors a:hover {
   border-bottom: none;
 }
 
@@ -1616,7 +1557,9 @@ img.progicons {
 } 
 
 .captains .popover-content,
-.morefellows .popover-content {
+.morefellows .popover-content,
+.btrustee .popover-content,
+.badvisors .popover-content {
   font-weight: 300;
   font-style: italic;
   padding-top: 0px;
@@ -1669,7 +1612,7 @@ img.progicons {
 }
 
 .chris {
-  background-position: 0 -400px;
+  background-position: 0 -200px;
 }
 
 .chriswhit {
@@ -1790,6 +1733,10 @@ img.progicons {
   text-align: left;
 }
 
+.press img a:hover {
+  text-decoration: none;
+}
+
 .press .cnn {
   background-image:url('../img/cnn.png');
   background-size: 86px;
@@ -1846,8 +1793,8 @@ img.progicons {
   width: 95px;
 }
 
-.press .sxsw {
-  background-image:url('../img/sxsw.png');
+.press .sxswedu {
+  background-image:url('../img/sxswedu.png');
   background-size: 167px;
   width: 167px;
 }
@@ -2017,10 +1964,12 @@ img.progicons {
 
   .page.quote {
     padding-bottom: 300px;
+    padding-right: 10em;
   }
 
   .page.story {
     padding-left: 250px;
+    padding-right: 10em;
   }
 
   .page.quote h1, .page.story h1 {
@@ -2041,12 +1990,12 @@ img.progicons {
     top:0px;
   }
 
-  .fellowship .yeartitle {
+  .fellowship .btrustee .badvisors .yeartitle {
     left: 30px;
   }
 
   .sidebartitle h1,
-  .fellowship .yeartitle h1 { 
+  .fellowship .btrustee .badvisors .yeartitle h1 { 
     font-size: 60px;
   } 
 
@@ -2055,7 +2004,7 @@ img.progicons {
   }
 
   .sidebartitle h2,
-  .fellowship .yeartitle h2 { 
+  .fellowship .btrustee .badvisors .yeartitle h2 { 
     font-size: 24px;
     line-height: 30px;
     margin-top: 20px;
@@ -2080,7 +2029,7 @@ img.progicons {
   }
 
   #loading h1 {
-    font-size: 130px;
+    font-size: 60px;
     margin: 50px auto 60px;
   }
  
