Adjusted to work on iPhone but still needs some work

--- a/css/screen.css
+++ b/css/screen.css
@@ -5,6 +5,11 @@
 /*****************************************************************************/
 
 /* Global Reset */
+@media screen and (max-width:1025px) {
+   #content {
+     width: 100%;
+   }
+}
 
 * {
   margin: 0;
