--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=800, initial-scale=0.25, maximum-scale=1">
+  <!--<meta name="viewport" content="width=800, initial-scale=0.25, maximum-scale=1">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>{{ page.title }}</title>
    
     <!-- Homepage CSS -->
